back to mostly normal, needs the zoom on mobile fixed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -401,7 +401,7 @@ h4 {
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgba(0, 0, 0, 0.25);
+        background: rgba(0, 0, 0, 0);
         color: white;
         display: flex;
         justify-content: center;
